--- a/index.html
+++ b/index.html
@@ -50,9 +50,22 @@ Video archive:  https://archive.org/details/@n-o-d-e
 
                 <!-- <li>
                     <a href="https://n-o-d-e.net/shop">
-                        <span class="notification"><span>[!!]</span><span>WATCHES, MULTITOOLS, KEYCHAINS ALL BACK IN STOCK</span></span>
+                        <span class="notification"><span>[!!]</span><span>ICEBOXES BACK IN STOCK</span></span>
                     </a>
                 </li> -->
+
+                <li>
+                    <a href="https://n-o-d-e.net/nfckey2.html">
+                        <span class="tag">[HW]</span><span>NFC KEY 2</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/piplug2.html">
+                        <span class="tag">[HW]</span><span>PI PLUG 2: TURN THE PI ZERO INTO A MINI SERVER</span>
+                    </a>
+                </li>
+
 
                 <li>
                     <a href="https://n-o-d-e.net/icebox.html">
