--- a/index.html
+++ b/index.html
@@ -50,9 +50,27 @@ Video archive:  https://archive.org/details/@n-o-d-e
 
                 <!-- <li>
                     <a href="https://n-o-d-e.net/shop">
-                        <span class="notification"><span>[!!]</span><span>ICEBOXES BACK IN STOCK</span></span>
+                        <span class="notification"><span>[!!]</span><span>MODIFIED CASIO WATCHES BACK IN STOCK</span></span>
                     </a>
                 </li> -->
+
+                <li>
+                    <a href="https://n-o-d-e.net/node_updates5.html">
+                        <span class="tag">[NO]</span><span>LOOKING FOR HELP WITH DEAD DROP / CYBER DUMP</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/dongle_hdmi2.html">
+                        <span class="tag">[HW]</span><span>TURN THE PI ZERO INTO A HDMI DONGLE COMPUTER (VERSION 2)</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/pislim2.html">
+                        <span class="tag">[HW]</span><span>PI SLIM 2 PROTOTYPE (POSSIBLE CLUSTER FORM FACTOR?)</span>
+                    </a>
+                </li>
 
                 <li>
                     <a href="https://n-o-d-e.net/nfckey2.html">
