--- a/index.html
+++ b/index.html
@@ -48,11 +48,17 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
 
-                <!-- <li>
+                <li>
                     <a href="https://n-o-d-e.net/shop">
-                        <span class="notification"><span>[!!]</span><span>MODIFIED CASIO WATCHES BACK IN STOCK</span></span>
+                        <span class="notification"><span>[!!]</span><span>ICEBOXES AND NFC KEYS BACK IN STOCK</span></span>
                     </a>
-                </li> -->
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/cd58.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 58 / SENSING WALLS, SKIN ELECTRONICS, LIFE EXTENSION, ROBOT FACES</span>
+                    </a>
+                </li>
 
                 <li>
                     <a href="https://n-o-d-e.net/node_updates5.html">
