--- a/index.html
+++ b/index.html
@@ -50,7 +50,13 @@ Video archive:  https://archive.org/details/@n-o-d-e
 
                 <li>
                     <a href="https://n-o-d-e.net/shop">
-                        <span class="notification"><span>[!!]</span><span>ICEBOXES AND NFC KEYS BACK IN STOCK</span></span>
+                        <span class="notification"><span>[!!]</span><span>MODIFIED NFC WATCHES BACK IN STOCK</span></span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://n-o-d-e.net/dd26.html">
+                        <span class="tag">[DD]</span><span>DEAD DROP 26 / SWITCH LINUX, INDUSTRIAL HACK, UNIVERSAL KEY, USB CRASH STICK</span>
                     </a>
                 </li>
 
