--- a/index.html
+++ b/index.html
@@ -48,9 +48,16 @@ Video archive:  https://archive.org/details/@n-o-d-e
             <ul>
 
 
-                <li>
+                <!-- <li>
                     <a href="https://n-o-d-e.net/shop">
                         <span class="notification"><span>[!!]</span><span>MODIFIED NFC WATCHES BACK IN STOCK</span></span>
+                    </a>
+                </li>
+ -->
+
+                <li>
+                    <a href="https://n-o-d-e.net/dc01.html">
+                        <span class="tag">[DC]</span><span>DECENTRALIZE 01 / WHY DECENTRALIZE?</span>
                     </a>
                 </li>
 
