New Post: piplug2b

--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@ Video archive:  https://archive.org/details/@n-o-d-e
                         <span class="notification"><span>[!!]</span><span>MODIFIED NFC WATCHES BACK IN STOCK</span></span>
                     </a>
                 </li>
- -->
+                -->
+
+                <li>
+                    <a href="https://n-o-d-e.net/piplug2b.html">
+                        <span class="tag">[HW]</span><span>THE PI PLUG MINI SERVER (V2 UPDATES)</span>
+                    </a>
+                </li>
 
                 <li>
                     <a href="https://n-o-d-e.net/dc01.html">
