New Posts: DD27 & CD59

--- a/index.html
+++ b/index.html
@@ -50,10 +50,22 @@ Video archive:  https://archive.org/details/@n-o-d-e
 
                 <!-- <li>
                     <a href="https://n-o-d-e.net/shop">
-                        <span class="notification"><span>[!!]</span><span>MODIFIED NFC WATCHES BACK IN STOCK</span></span>
+                        <span class="notification"><span>[!!]</span><span>NFC KEYS / ICEBOXES / MULTITOOLS BACK IN STOCK</span></span>
+                    </a>
+                </li> -->
+               
+
+                <li>
+                    <a href="https://n-o-d-e.net/dd27.html">
+                        <span class="tag">[DD]</span><span>DEAD DROP 27 / CRITICAL PGP BUG, TWITTER BREACH, FREEDOM SMARTPHONE, CHIP DECAPPING</span>
                     </a>
                 </li>
-                -->
+
+                <li>
+                    <a href="https://n-o-d-e.net/cd59.html">
+                        <span class="tag">[CD]</span><span>CYBER DUMP 59 / HOMEMADE CHIPS, VR THEME PARK, AI PHONE CALLS, ROBOT WAREHOUSE</span>
+                    </a>
+                </li>
 
                 <li>
                     <a href="https://n-o-d-e.net/piplug2b.html">
